// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should delete old items from childred map with custom tag 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"list\\": [
                {
                    \\"id\\": 1,
                    \\"value\\": \\"a\\"
                },
                {
                    \\"id\\": 2,
                    \\"value\\": \\"b\\"
                },
                {
                    \\"id\\": 3,
                    \\"value\\": \\"c\\"
                }
            ]
        },
        \\"C\\": [
            \\"2\\",
            \\"3\\",
            \\"4\\"
        ],
        \\"N\\": [
            0
        ]
    },
    \\"2\\": {
        \\"C\\": [
            \\"5\\"
        ],
        \\"N\\": [
            1
        ]
    },
    \\"3\\": {
        \\"C\\": [
            \\"6\\"
        ],
        \\"N\\": [
            3
        ]
    },
    \\"4\\": {
        \\"C\\": [
            \\"7\\"
        ],
        \\"N\\": [
            5
        ]
    },
    \\"5\\": {
        \\"O\\": {
            \\"props\\": {
                \\"id\\": 1,
                \\"value\\": \\"a\\"
            }
        },
        \\"N\\": [
            0,
            [
                0,
                0
            ]
        ]
    },
    \\"6\\": {
        \\"O\\": {
            \\"props\\": {
                \\"id\\": 2,
                \\"value\\": \\"b\\"
            }
        },
        \\"N\\": [
            2,
            [
                2,
                0
            ]
        ]
    },
    \\"7\\": {
        \\"O\\": {
            \\"props\\": {
                \\"id\\": 3,
                \\"value\\": \\"c\\"
            }
        },
        \\"N\\": [
            4,
            [
                4,
                0
            ]
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <ul>
    <li>1:a</li>
    <!--0-->
    <li>2:b</li>
    <!--0-->
    <li>3:c</li>
    <!--0-->
  </ul>
</div>
",
}
`;

exports[`should iterate over arrays without options 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"N\\": [
            0,
            2
        ]
    },
    \\"2\\": {
        \\"N\\": [
            4,
            6
        ]
    },
    \\"3\\": {
        \\"N\\": [
            8,
            10
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\",
            \\"2\\",
            \\"3\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>a
  <!--0-->;
  <!--1-->b
  <!--2-->;
  <!--3-->c
  <!--4-->;
</div>
",
}
`;

exports[`should iterate over objects 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"N\\": [
            0,
            2,
            4,
            6
        ]
    },
    \\"2\\": {
        \\"N\\": [
            8,
            10,
            12,
            14
        ]
    },
    \\"3\\": {
        \\"N\\": [
            16,
            18,
            20,
            22
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\",
            \\"2\\",
            \\"3\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>a
  <!--0-->:
  <!--1-->1
  <!--2-->;
  <!--3-->b
  <!--4-->:
  <!--5-->2
  <!--6-->;
  <!--7-->c
  <!--8-->:
  <!--9-->3
  <!--10-->;
</div>
",
}
`;

exports[`should not expose local variables 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"C\\": [
            \\"3\\",
            \\"4\\"
        ],
        \\"N\\": [
            0
        ]
    },
    \\"2\\": {
        \\"C\\": [
            \\"5\\",
            \\"6\\"
        ],
        \\"N\\": [
            1
        ]
    },
    \\"3\\": {
        \\"N\\": [
            0,
            [
                0,
                0
            ]
        ]
    },
    \\"4\\": {
        \\"N\\": [
            1,
            [
                1,
                0
            ]
        ]
    },
    \\"5\\": {
        \\"N\\": [
            0,
            [
                0,
                0
            ]
        ]
    },
    \\"6\\": {
        \\"N\\": [
            1,
            [
                1,
                0
            ]
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\",
            \\"2\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<section>
  <i>
    <b>1</b>
    <b>2</b>
  </i>
  <i>
    <b>1</b>
    <b>2</b>
  </i>
</section>
",
}
`;

exports[`should render arrays 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"N\\": [
            0,
            [
                0,
                0
            ],
            [
                0,
                2
            ],
            [
                0,
                4
            ]
        ]
    },
    \\"2\\": {
        \\"N\\": [
            1,
            [
                1,
                0
            ],
            [
                1,
                2
            ],
            [
                1,
                4
            ]
        ]
    },
    \\"3\\": {
        \\"N\\": [
            2,
            [
                2,
                0
            ],
            [
                2,
                2
            ],
            [
                2,
                4
            ]
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\",
            \\"2\\",
            \\"3\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<ul>
  <li>0
    <!--0-->:
    <!--1-->1
  </li>
  <li>1
    <!--0-->:
    <!--1-->2
  </li>
  <li>2
    <!--0-->:
    <!--1-->3
  </li>
</ul>
",
}
`;

exports[`should render arrays with externals 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"N\\": [
            0,
            [
                0,
                0
            ],
            [
                0,
                2
            ]
        ]
    },
    \\"2\\": {
        \\"N\\": [
            1,
            [
                1,
                0
            ],
            [
                1,
                2
            ]
        ]
    },
    \\"3\\": {
        \\"N\\": [
            2,
            [
                2,
                0
            ],
            [
                2,
                2
            ]
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\",
            \\"2\\",
            \\"3\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <p>1
    <!--0-->.js
  </p>
  <p>2
    <!--0-->.js
  </p>
  <p>3
    <!--0-->.js
  </p>
</div>
",
}
`;
